add search to products and tests
